--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Page Title</title>
+	<title>Wireframe</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<link href="style.css" media="screen" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div>
+	<div class="clearfix">
 		<header>
 			header
 		</header>
@@ -15,21 +15,21 @@
 			nav
 		</nav>
 		<div>
-			<section>
+			<section id="section">
 				Section
 				<article>
 					article
-					<h1>h1, h2, h3</h1>
-					<p>p</p>
+					<h3 id="content1">h1, h2, h3</h3>
+					<p id="content2">p</p>
 				</article>
 			</section>
 			<aside>
 				aside
 			</aside>
 		</div>
-		<footer>
-			footer
-		</footer>
 	</div>
+	<footer>
+		footer
+	</footer>
 </body>
 </html>
